--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         <div class="btn lime" type="button" id="lime">2</div>
         <div class="btn purple" type="button" id="purple">4</div>
     </div>
+    <!-- Add this to your HTML file -->
+    
     </div>
+    
+    <!-- <button type="button" id="startButton">Click to Start Game</button> -->
     <script src="./app.js"></script>
 </body>
 </html>
